# Illuminator

./: .gitignore  Cargo.toml  PLAN.md  README.md
crates/illuminator-app/: Cargo.toml
crates/illuminator-app/src/: app.rs  canvas.rs  commands.rs  direct_select.rs  interaction.rs  main.rs  menu.rs  pen.rs  snap.rs  text.rs
crates/illuminator-app/src/panels/: layers.rs  mod.rs  properties.rs  right.rs  status.rs  tools_palette.rs
crates/illuminator-app/src/tools/: mod.rs
crates/illuminator-core/: Cargo.toml
crates/illuminator-core/src/: command.rs  doc.rs  image.rs  io.rs  lib.rs  path.rs  style.rs  svg.rs  text.rs  transform.rs
crates/illuminator-render/: Cargo.toml
crates/illuminator-render/src/: lib.rs
