[package]
name = "illuminator-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
glam.workspace = true
slotmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
base64.workspace = true
usvg.workspace = true
xmlwriter.workspace = true
log.workspace = true
